--- a/style.css
+++ b/style.css
@@ -134,16 +134,18 @@ body{
     font-family: 'Press Start 2P',sans-serif;
     font-size: 0.6rem;
 }
-@media (max-width: 768px) {
+@media (max-width: 414px) and (max-height: 896px){
+    
     #header {
-        font-size: 18px; /* Adjust the font size for smaller devices */
+        font-size: 12px; /* Adjust the font size for smaller devices */
     }
 
     .mode {
         position: absolute;
-        left: 51%;
+        left: 55%;
         top: 20%;
         transform: translate(-50%, -50%);
+        font-size: 10px;
     }
     
     .checkbox-group {
@@ -170,17 +172,19 @@ body{
     }
 
     #inputbox {
-        width: 420px; 
+        width: 200px; 
     }
 
     #outputbox {
-        width: 420px; 
-        height: 250px;
+        width: 200px; 
+        height: 150px;
     }
     .submit{
         position: absolute;
         top:41%;
         left:98%;
+        padding: 5px;
+        font-size: 7px;
         
     }
     .submit:hover{
@@ -193,7 +197,7 @@ body{
         margin-left: 5px;
 }
 .copyright{
-    font-size: 0.6rem;
+    font-size: 0.4rem;
     padding: 1px;
     white-space: nowrap;
 }
