--- a/style.css
+++ b/style.css
@@ -185,20 +185,27 @@ body{
         left:98%;
         padding: 5px;
         font-size: 7px;
-        
+        transition: 0.2s;
+        font-size: 7px;
     }
     .submit:hover{
         position: absolute;
         top:41%;
         left:98%;
-        transition: 0.2s;
+        padding: 5px;
+        font-size: 7px;
+        
     }
     .mode #tm{
         margin-left: 5px;
+}
+.submit:active{
+    padding: 4px;
+    font-size:6px;
 }
 .copyright{
     font-size: 0.4rem;
     padding: 1px;
     white-space: nowrap;
-}
+    }
 }
