--- a/style.css
+++ b/style.css
@@ -123,6 +123,8 @@ body {
 @media (max-width: 414px) and (max-height: 896px){
 
     #header {
+        position: absolute;
+        top:-1%;
         font-size:12px;
         margin-bottom: 100px;
         color: #1bd11b;
@@ -133,7 +135,7 @@ body {
     .mode {
         position: absolute;
         left: 55%;
-        top: 25%;
+        top: 20%;
         transform: translate(-50%, -50%);
         font-size: 10px;
     }
@@ -149,28 +151,38 @@ body {
         font-family: 'Press Start 2P', sans-serif;
         color: #1bd11b;
     }
+    .container{
+        position: absolute;
+        top:30%;
+    }
     #inputbox {
         width: 300px; 
         font-size: 7px;
+       
     }
 
     #outputbox {
         width: 300px; 
         height: 200px;
-        margin-top: 50px;
+        margin-top: 20px;
         font-size: 7px;
     }
     .mode #tm{
         margin-left: 5px;
 }
 
+
 .mode{
     margin-left: 27px ;
 }
 
 .copyright{
+    position: absolute;
     font-size: 0.4rem;
     padding: 1px;
     white-space: nowrap;
+    top:98%;
+    left:50%;
+    transform: translate(-50%, -50%);
     }
 }
