--- a/style.css
+++ b/style.css
@@ -120,12 +120,12 @@ body {
     font-family: 'Press Start 2P',sans-serif;
     font-size: 0.6rem;
 }
-@media (max-width: 414px) and (max-height: 896px){
 
+@media (max-width: 414px) and (max-height: 896px) {
     #header {
         position: absolute;
-        top:-1%;
-        font-size:12px;
+        top: -1%;
+        font-size: 12px;
         margin-bottom: 100px;
         color: #1bd11b;
         font-family: 'Press Start 2P', sans-serif;
@@ -139,26 +139,15 @@ body {
         transform: translate(-50%, -50%);
         font-size: 10px;
     }
-    
-    .checkbox-group {
-        display: flex; /* Display checkboxes and text in a flex container */
-        align-items: center; /* Vertically align items in the center */
-        margin-bottom: 10px; /* Add some space between the checkbox groups */
-    }
-    
-    .text {
-        margin-left: 10px; /* Add some space between checkbox and text */
-        font-family: 'Press Start 2P', sans-serif;
-        color: #1bd11b;
-    }
-    .container{
+
+    .container {
         position: absolute;
-        top:30%;
+        top: 30%;
     }
+
     #inputbox {
         width: 300px; 
         font-size: 7px;
-       
     }
 
     #outputbox {
@@ -167,22 +156,29 @@ body {
         margin-top: 20px;
         font-size: 7px;
     }
-    .mode #tm{
+
+    .mode #tm {
         margin-left: 5px;
-}
-
-
-.mode{
-    margin-left: 27px ;
-}
-
-.copyright{
-    position: absolute;
-    font-size: 0.4rem;
-    padding: 1px;
-    white-space: nowrap;
-    top:98%;
-    left:50%;
-    transform: translate(-50%, -50%);
     }
+
+    .mode {
+        margin-left: 27px;
+    }
+
+    .copyright {
+        position: absolute;
+        font-size: 0.4rem;
+        padding: 1px;
+        white-space: nowrap;
+        top: 98%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .checkbox-group {
+        display:block;
+        align-items: center;
+        margin-right: 10px;
+        margin-bottom: 10px;
+    }
+
 }
