--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 #header {
-    height: 120px; /* Add a fixed height for the header */
+    height: 120px; 
     margin-top: 30px;
     color: #1bd11b;
     font-family: 'Press Start 2P', sans-serif;
@@ -123,27 +123,17 @@ body {
 
 @media (max-width: 414px) and (max-height: 896px) {
     #header {
-        position: absolute;
-        top: -1%;
         font-size: 12px;
         margin-bottom: 100px;
-        color: #1bd11b;
-        font-family: 'Press Start 2P', sans-serif;
-        text-align: center;
+        height: 0px; 
+        margin-top: 10px;
     }
 
     .mode {
-        position: absolute;
-        left: 55%;
-        top: 20%;
-        transform: translate(-50%, -50%);
         font-size: 10px;
     }
 
-    .container {
-        position: absolute;
-        top: 30%;
-    }
+ 
 
     #inputbox {
         width: 300px; 
@@ -165,20 +155,15 @@ body {
         margin-left: 27px;
     }
 
-    .copyright {
-        position: absolute;
-        font-size: 0.4rem;
-        padding: 1px;
-        white-space: nowrap;
-        top: 98%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
     .checkbox-group {
-        display:block;
-        align-items: center;
-        margin-right: 10px;
         margin-bottom: 10px;
+        display: block;
+    }
+    .copyright{
+        text-align: center;
+        color: #1bd11b;
+        font-family: 'Press Start 2P',sans-serif;
+        font-size: 7px;
     }
 
 }
